ui: avoid layout shift from scrollbar

--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -13,8 +13,9 @@ html
 
 // Body
 body
-	padding-left calc(50% - 240px)
 	margin 0
+	padding-left calc(50vw - 240px)
+	scrollbar-gutter stable
 
 // Paragraphs
 p
